# aegis

./: .gitignore  README.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
aegis-crypto/: Cargo.toml  build-android.sh  cargo-config.toml  copy-android-libs.sh
aegis-crypto/docs/: aes-256-gcm.md
aegis-crypto/src/: crypto.rs  error.rs  lib.rs  v2.rs
android/: build.gradle  settings.gradle
android/app/: build.gradle
backend/: .gitignore  Cargo.toml
backend/examples/: random.rs
backend/scripts/: create_tables.sh
backend/src/: main.rs  route.rs
configs/: app.config.example.json  google-services.json
docs/: app-info.md  call_keep.md  react-native-styles.md  recovery-keys.md  run.md  rust.md
docs/cache/: implementations.md
ios/: Podfile
ios/Aegis/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/Aegis.xcodeproj/: project.pbxproj
ios/AegisTests/: AegisTests.m
scripts/: build.sh  create-standalone-ndk.sh  install.md  run.sh
src/: App.tsx  AppModules.tsx  Search.tsx
src/appmodules/: AegisModule.tsx  ContactsModule.tsx  MessagesModule.tsx  PhoneModules.tsx
src/auth/: Login.tsx  LoginWithPin.tsx  Signup.tsx
src/components/: Button.tsx  ButtonTextInput.tsx  Card.tsx  InteractiveTextInput.style.ts  InteractiveTextInput.tsx  Row.tsx  Text.tsx  TextInput.tsx  TextInputIcon.tsx
src/context/: AppProvider.tsx  AuthContext.tsx
src/home/: Index.tsx
src/routes/: AuthRoutes.tsx  BaseRoutes.tsx  UserRoutes.tsx
src/screens/: Add.tsx  Creds.tsx  Edit.tsx  Home.tsx  Profile.tsx
src/styles/: index.ts
(+19 files in other folders)
