[package]
name = "aegis-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
    "staticlib",
    
    "cdylib", 
    "rlib"
]

[dependencies]
libc = "0.2.169"
jni = "0.21.1"
aes = "0.8.4"
block-modes = "0.9.1"
rand = "0.8.5"
cbc = { version="0.1.2" }
cipher = { version="0.4.4", features=["rand_core", "block-padding", "zeroize"] }
hex-literal = "0.4.1"

serde = { version="1.0.217", features=["derive"]}
serde_json = "1.0.134"
hex = "0.4.3"
